# This crate is derived from Supabase postgres-language-server
# https://github.com/supabase-community/postgres-language-server
# Licensed under MIT License
# Copyright (c) 2023 Philipp Steinrötter

[package]
name = "pgls-treesitter-grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tree-sitter grammar for PostgreSQL (from Supabase postgres-language-server)"

build = "build.rs"
include = ["grammar.js", "src/*", "NOTICE", "LICENSE"]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
